Added about section

--- a/sass/sections/_home.sass
+++ b/sass/sections/_home.sass
@@ -13,7 +13,7 @@
     &::before
         position: absolute
         content: ""
-        background: rgba(0, 0, 0, .6)
+        background: rgba(0, 0, 0, .75)
         top: 0
         right: 0
         left: 0
@@ -42,11 +42,13 @@
         line-height: 50px
         font-weight: 700
         margin-bottom: 1rem
+        font-family: "Poppins", sans-serif
 
     &__desc
         font-size: 18px
-        font-weight: 600
+        font-weight: 500
         color: #fff
+        font-family: "Poppins", sans-serif
 
 
 .socials
