--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+body {
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  color: #666;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -18,6 +24,10 @@ ul {
 a {
   text-decoration: none;
   color: black;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  font-family: "Poppins", sans-serif;
 }
 
 .header {
@@ -84,7 +94,6 @@ a {
   font-size: 18px;
   font-weight: 600;
   color: #555;
-  font-family: "Poppins", sans-serif;
 }
 
 .logo {
@@ -243,7 +252,7 @@ a {
 .home::before {
   position: absolute;
   content: "";
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.75);
   top: 0;
   right: 0;
   left: 0;
@@ -285,12 +294,14 @@ a {
   line-height: 50px;
   font-weight: 700;
   margin-bottom: 1rem;
+  font-family: "Poppins", sans-serif;
 }
 
 .home__desc {
   font-size: 18px;
-  font-weight: 600;
+  font-weight: 500;
   color: #fff;
+  font-family: "Poppins", sans-serif;
 }
 
 .socials {
@@ -321,6 +332,172 @@ a {
 .socials li i {
   width: 100%;
   color: #ffffff;
+}
+
+.about {
+  padding: 5rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.about__title {
+  position: relative;
+}
+
+.about__content {
+  padding: 1rem;
+  margin-top: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  max-width: 1140px;
+}
+
+.about__content .descr {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  background: #ffffff;
+  -webkit-box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
+          box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
+  padding: 2rem;
+  width: 100%;
+  max-width: 66%;
+  border-radius: 10px;
+  font-size: 16px;
+  color: #666;
+  line-height: 1.625;
+  -webkit-hyphens: auto;
+      -ms-hyphens: auto;
+          hyphens: auto;
+}
+
+.about__content .descr p {
+  margin-bottom: 1rem;
+}
+
+.about__logo {
+  position: relative;
+  overflow: hidden;
+  padding: 1rem;
+  width: 100%;
+  max-width: 31%;
+  height: calc(100% - 6.8rem);
+  -webkit-box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
+          box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
+  border-radius: 10px;
+}
+
+.about__logo img {
+  width: 100%;
+  border-radius: 10px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: relative;
+}
+
+.about__info-wrap {
+  width: 100%;
+  max-width: 1140px;
+  padding: 1rem;
+}
+
+.about__info {
+  padding: 1.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0 auto;
+  background: #ffffff;
+  -webkit-box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
+          box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
+  border-radius: 10px;
+}
+
+.about__info li {
+  -webkit-box-flex: 50%;
+      -ms-flex: 50%;
+          flex: 50%;
+  margin-bottom: 10px;
+}
+
+.about__info label {
+  display: inline-block;
+  color: #555;
+  font-weight: 600;
+  min-width: 100px;
+}
+
+.title {
+  font-size: 2rem;
+  font-weight: 700;
+  color: #555;
+  display: inline-block;
+  position: relative;
+  text-transform: uppercase;
+}
+
+.title__color {
+  color: #7280ff;
+}
+
+.title__bg-text {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  font-size: 5rem;
+  z-index: -1;
+  opacity: 0.07;
+}
+
+@media screen and (max-width: 1024px) {
+  .about__content {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .about__content .descr {
+    max-width: 100%;
+    margin: 1rem 0 0 0;
+  }
+  .about__logo {
+    max-width: 400px;
+  }
+  .about__info {
+    max-width: 100%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .about__content .descr {
+    padding: 1rem;
+  }
+  .about__info li {
+    -webkit-box-flex: 100%;
+        -ms-flex: 100%;
+            flex: 100%;
+  }
 }
 
 .main-content {
