--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -1,4 +1,7 @@
-
+body
+    font-family: "Open Sans", sans-serif
+    font-size: 16px
+    color: #666
 
 *
     box-sizing: border-box
@@ -17,3 +20,5 @@ a
     text-decoration: none
     color: black
 
+h1, h2, h3, h4, h5, h6, p
+    font-family: "Poppins", sans-serif
