--- a/sass/main.sass
+++ b/sass/main.sass
@@ -3,6 +3,7 @@
 @import "sections/header"
 @import "sections/home"
 @import "sections/about"
+@import "sections/resume"
 
 .main-content 
     padding-left: 250px
