--- a/sass/sections/_home.sass
+++ b/sass/sections/_home.sass
@@ -7,6 +7,7 @@
     background-repeat: no-repeat
     background-position: center
     background-size: cover
+    background-attachment: fixed
     position: relative
     color: #ffffff
 
@@ -42,13 +43,14 @@
         line-height: 50px
         font-weight: 700
         margin-bottom: 1rem
-        font-family: "Poppins", sans-serif
+
+        @media screen and (max-width: 768px)
+            font-size: 2rem
 
     &__desc
         font-size: 18px
         font-weight: 500
         color: #fff
-        font-family: "Poppins", sans-serif
 
 
 .socials
