--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Open Sans", sans-serif;
-  font-size: 16px;
+  font-size: 1rem;
   color: #666;
 }
 
@@ -623,5 +623,35 @@ h1, h2, h3, h4, h5, h6, p {
   .main-content {
     padding: 0;
   }
+}
+
+::-webkit-scrollbar-button {
+  background-image: url("");
+  width: 5px;
+  height: 0px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #ecedee;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 2px;
+  background-color: #6dc0c8;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #56999f;
+}
+
+::-webkit-resizer {
+  background-image: url("");
+  background-repeat: no-repeat;
+  width: 5px;
+  height: 0px;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
 }
 /*# sourceMappingURL=main.css.map */
