--- a/sass/main.sass
+++ b/sass/main.sass
@@ -14,3 +14,33 @@
     .main-content
         padding: 0
 
+::-webkit-scrollbar-button 
+    background-image:url('')
+    background-repeat:no-repeat
+    width: 5px
+    height: 0px
+
+
+::-webkit-scrollbar-track 
+    background-color:#ecedee
+
+
+::-webkit-scrollbar-thumb 
+    -webkit-border-radius: 2px
+    border-radius: 2px
+    background-color:#6dc0c8
+
+
+::-webkit-scrollbar-thumb:hover
+    background-color:#56999f
+
+
+::-webkit-resizer
+    background-image: url('')
+    background-repeat: no-repeat
+    width: 5px
+    height: 0px
+
+
+::-webkit-scrollbar
+    width: 6px
