--- a/sass/sections/_resume.sass
+++ b/sass/sections/_resume.sass
@@ -20,12 +20,12 @@
         @media screen and (max-width: 1024px)
             max-width: 680px
 
-.skills
+.skills-wrap
     width: 100%
     max-width: 50%
     padding: 1rem
 
-    ul
+    .skills
         padding: 1rem
         background: #ffffff
         box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1)
