--- a/css/main.css
+++ b/css/main.css
@@ -608,7 +608,7 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 @media screen and (max-width: 1024px) {
-  .skills {
+  .skills-wrap {
     max-width: 100%;
   }
 }
