Added portfolio section

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -4,6 +4,7 @@
 @import "sections/home"
 @import "sections/about"
 @import "sections/resume"
+@import "sections/portfolio"
 
 .main-content 
     padding-left: 250px
@@ -13,6 +14,11 @@
 @media screen and (max-width: 1024px)
     .main-content
         padding: 0
+
+.footer
+    width: 100%
+    padding: 3rem 1rem
+    text-align: center
 
 ::-webkit-scrollbar-button 
     background-image:url('')
