--- a/css/main.css
+++ b/css/main.css
@@ -613,6 +613,84 @@ h1, h2, h3, h4, h5, h6, p {
   }
 }
 
+.portfolio {
+  padding: 5rem 0 0 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.portfolio__title {
+  position: relative;
+}
+
+.portfolio__content {
+  padding: 1rem;
+  margin-top: 1rem;
+  width: 100%;
+  max-width: 1140px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(320px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-gap: 3rem;
+}
+
+.portfolio__filter {
+  padding: 2rem 1rem;
+}
+
+.portfolio__filter li {
+  display: inline-block;
+  margin: 0 15px;
+}
+
+.filter__btn {
+  padding: .5rem 2rem;
+  margin: 0 5px;
+  font-size: 1rem;
+  color: #666;
+  background: #ffffff;
+  border: 1px solid #7280ff;
+  border-radius: 5px;
+  cursor: pointer;
+  -webkit-transition: all .65s;
+  transition: all .65s;
+  -webkit-box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
+          box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
+}
+
+.filter__btn:hover {
+  color: #ffffff;
+  background: #7280ff;
+}
+
+.filter__btn.active {
+  color: #ffffff;
+  background: #7280ff;
+}
+
+.work__image {
+  width: 100%;
+  height: calc(100% - 6.8rem);
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.work__descr {
+  text-align: center;
+}
+
 .main-content {
   padding-left: 250px;
   position: relative;
@@ -623,6 +701,12 @@ h1, h2, h3, h4, h5, h6, p {
   .main-content {
     padding: 0;
   }
+}
+
+.footer {
+  width: 100%;
+  padding: 3rem 1rem;
+  text-align: center;
 }
 
 ::-webkit-scrollbar-button {
