--- a/sass/sections/_header.sass
+++ b/sass/sections/_header.sass
@@ -81,12 +81,18 @@
             top: 50%
             transform: translateY(-50%)
 
-        a      
+        a   
+            display: inline-block
             padding-left: 25px
             font-size: 1rem
+            width: 100%
+            height: 40px
 
         &:hover a
             transition: all 0.3s ease-in
+            color: #7280ff
+
+        .active
             color: #7280ff
 
 .toggle-icon
