--- a/sass/sections/_home.sass
+++ b/sass/sections/_home.sass
@@ -66,13 +66,13 @@
             font-size: 14px
             line-height: 42px
             text-align: center
-            border-radius: 50%
-            transition: all 0.3s ease-in
-            border: 1px solid rgba(255, 255, 255, 0.2)
+            
 
-        &:hover a 
-            background: #7280ff
+        &:hover i 
+            color: #7280ff
         i
             width: 100%
+            font-size: 24px
             color: #ffffff
+            transition: all 0.3s ease-in
 
