--- a/sass/sections/_portfolio.sass
+++ b/sass/sections/_portfolio.sass
@@ -51,7 +51,9 @@
         font-size: .8rem
 
 .work
-
+    box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1)
+    padding: 1rem
+    
     &__image
         width: 100%
         height: calc(100% - 6.8rem)
