Added animation in home section

--- a/sass/sections/_header.sass
+++ b/sass/sections/_header.sass
@@ -89,7 +89,7 @@
             height: 40px
 
         &:hover a
-            transition: all 0.3s ease-in
+            transition: all .3s ease
             color: #7280ff
 
         .active
