--- a/sass/sections/_home.sass
+++ b/sass/sections/_home.sass
@@ -30,13 +30,15 @@
 
     &__logo
         width: 100%
-        max-width: 160px
+        max-width: 230px
 
         img
             width: 100%
             border: 5px solid #7280ff
             border-radius: 50%
             margin: .8rem 0
+            box-shadow: 0px 0px 11px 6px rgba(#7280ff, 0.37)
+            animation: shadow  5s infinite ease-in-out
 
     &__name
         font-size: 2.5rem
@@ -76,3 +78,15 @@
             color: #ffffff
             transition: all 0.3s ease-in
 
+@keyframes shadow
+    0%
+        box-shadow: 0px 0px 11px 6px rgba(#7280ff, 0.37)
+
+    25%
+        box-shadow: 0px 0px 11px 6px rgba(187, 40, 177, 0.37)
+    75%
+        box-shadow: 0px 0px 11px 6px rgba(94, 187, 117, 0.37)
+    100%
+        box-shadow: 0px 0px 11px 6px rgba(#7280ff, 0.37)
+        
+        
