Added js practice sites

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,5 +1,8 @@
 @import "base/base"
     
+@import "components/toggleBtn"
+@import "components/sectionsTitle"
+
 @import "sections/header"
 @import "sections/home"
 @import "sections/about"
