--- a/sass/sections/_home.sass
+++ b/sass/sections/_home.sass
@@ -34,11 +34,10 @@
 
         img
             width: 100%
-            border: 5px solid #7280ff
+            border: 5px solid #8792f1
             border-radius: 50%
             margin: .8rem 0
-            box-shadow: 0px 0px 11px 6px rgba(#7280ff, 0.37)
-            animation: shadow  5s infinite ease-in-out
+            box-shadow: 0px 0px 11px 6px rgba(#8792f1, 0.37)
 
     &__name
         font-size: 2.5rem
@@ -77,16 +76,4 @@
             font-size: 24px
             color: #ffffff
             transition: all 0.3s ease-in
-
-@keyframes shadow
-    0%
-        box-shadow: 0px 0px 11px 6px rgba(#7280ff, 0.37)
-
-    25%
-        box-shadow: 0px 0px 11px 6px rgba(187, 40, 177, 0.37)
-    75%
-        box-shadow: 0px 0px 11px 6px rgba(94, 187, 117, 0.37)
-    100%
-        box-shadow: 0px 0px 11px 6px rgba(#7280ff, 0.37)
-        
         
