--- a/sass/sections/_portfolio.sass
+++ b/sass/sections/_portfolio.sass
@@ -4,6 +4,7 @@
     flex-direction: column
     justify-content: center
     align-items: center
+    z-index: 20
 
     &__title
         position: relative
