--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+    
 body
-    font-family: "Open Sans", sans-serif
+    font-family: 'Roboto', sans-serif;
     font-size: 1rem
     color: #666
 
