--- a/sass/sections/_portfolio.sass
+++ b/sass/sections/_portfolio.sass
@@ -13,9 +13,6 @@
         margin-top: 1rem
         padding: 1rem
         max-width: 1140px
-        display: grid
-        grid-template-columns: repeat(auto-fit, minmax(290px, 1fr))
-        grid-gap: 3rem
         width: 100%
 
     &__filter
@@ -52,13 +49,47 @@
         font-size: .8rem
 
 .work
+    margin-top: 30px
     padding: 1rem
+    border: .5px solid #cccccc
     box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1)
-    
+    transition: all .5s ease
+
+    .image-wrap
+        position: relative
+        overflow: hidden
+        cursor: pointer
+
+    &__image-descr
+        z-index: 10
+        position: absolute
+        top: 0
+        right: -100%
+        padding: 1rem
+        display: flex
+        flex-direction: column
+        justify-content: center
+        align-items: center
+        width: 100%
+        height: 100%
+        background: rgba(0, 0, 0, .5)
+        color: #fff
+        font-size: 1rem
+        transition: all .5s ease
+
     &__image
         width: 100%
         height: calc(100% - 6.8rem)
         object-fit: cover
 
+    .image-wrap:hover &__image-descr
+        right: 0
+
     &__descr
+        position: relative
+        padding-top: 1rem
         text-align: center
+        
+    &__github
+        position: absolute
+        left: 0
