--- a/sites/promotions/css/style.css
+++ b/sites/promotions/css/style.css
@@ -123,8 +123,8 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
     height: 100vh;
-    overflow: hidden;
     animation-delay: 1s;
 }
 
